- final yaml edits for testing

--- a/schedules.yaml
+++ b/schedules.yaml
@@ -1,20 +1,20 @@
-#- package: src.scheduler
-#  class: ControllerCrawl
-#  params:
-#    dir_name: /home/azureuser/crawler/
-#    java_exec: OpenGovCrawler.jar
-#    config_file: /home/azureuser/crawler/config.properties
-#- package: src.scheduler
-#  class: ControllerIndex
-#  params:
-#    urls:
-#        - http://localhost:8983/solr/dit_consultations/dataimport?command=full-import&clean=true
-#        - http://localhost:8983/solr/dit_articles/dataimport?command=full-import&clean=true
-#        - http://localhost:8983/solr/dit_comments/dataimport?command=full-import&clean=true
-#- package: src.scheduler
-#  class: ControllerWordCloud
-#  params:
-#    url: http://localhost:28084/WordCloud/Extractor
+- package: src.scheduler
+  class: ControllerCrawl
+  params:
+    dir_name: /home/azureuser/crawler/
+    java_exec: OpenGovCrawler.jar
+    config_file: /home/azureuser/crawler/config.properties
+- package: src.scheduler
+  class: ControllerIndex
+  params:
+    urls:
+        - http://localhost:8983/solr/dit_consultations/dataimport?command=full-import&clean=true
+        - http://localhost:8983/solr/dit_articles/dataimport?command=full-import&clean=true
+        - http://localhost:8983/solr/dit_comments/dataimport?command=full-import&clean=true
+- package: src.scheduler
+  class: ControllerWordCloud
+  params:
+    url: http://localhost:28084/WordCloud/Extractor
 - package: src.scheduler
   class: ControllerFekAnnotator
   params:
